--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -117,14 +117,14 @@
       <div class="four-col social">
         <div id="social_links">
           <a href="#" class="instagram">
-            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon name="logo-instagram">Instagram</ion-icon>
             </ion-icon>
           </a>
           <a href="#" class="facebook">
-            <ion-icon name="logo-facebook">
+            <ion-icon name="logo-facebook">Facebook</ion-icon>
           </a>
           <a href="#" class="twitter">
-            <ion-icon name="logo-twitter">
+            <ion-icon name="logo-twitter">Twitter</ion-icon>
           </a>
         </div>
 
